2004-12-13  Paolo Borelli  <pborelli@katamail.com>

	* gedit2.c: do not process further options if --quit is specified.

2004-12-10  Balamurali Viswanathan  <balamurali.viswanathan@wipro.com>

	Patch from Srirama Sharma  <srirama.sharma@wipro.com>

	* dialogs/uri.glade2: Remove the explicit call to set AtkRelation 
	since the widget is set as mnemonic widget. Fixes the Bug #160593.

2004-12-07  Arvind Samptur  <arvind.samptur@wipro.com>

	Patch from Srirama Sharma  <srirama.sharma@wipro.com>

	* gedit/dialogs/gedit-page-setup-dialog.c: Setting the AtkRelation 
	explicitly for the mnemonic widget is causing gnopernicus to read 
	the label thrice. Hence removing the explicit declaration will fix the Bug #160322.

2004-12-06  Paolo Borelli  <pborelli@katamail.com>

	* gedit-document.[ch]: store the myme_type in Document->priv.
	* gedit-mdi-child.c: use the above instead of refetching it.

2004-12-06  Paolo Borelli  <pborelli@katamail.com>

	* gedit-io-error-dialogs.c: add error message for the case were the
	file we are trying to open is not a regular file.

2004-12-05  Paolo Borelli  <pborelli@katamail.com>

	* gedit-document.c: do not create unwanted backups in autosave mode.

2004-12-05  Paolo Maggi  <paolo@gnome.org>

	* gedit-view.c (gedit_view_update_cursor_position_statusbar): added a comment
	for translators (see bug #104439 for more info).

2004-12-05  Paolo Borelli  <pborelli@katamail.com>

	* gedit-file.c:
	* dialogs/gedit-close-confirmation-dialog.c: fix a ngettext string.

2004-12-05  Paolo Borelli  <pborelli@katamail.com>

	* gedit-io-error-dialogs.[ch]:
	* gedit-utils.[ch]:
	* gedit-file.c:
	* Makefile.am:

	Split error dialogs for io operations in a separate file.

2004-12-02  Paolo Borelli  <pborelli@katamail.com>

	* gedit-mdi.c: delay the recent view creation for the toolbar
	button to the first button press. Should improve startup time.

2004-11-28  Paolo Borelli  <pborelli@katamail.com>

	* gedit-languages-manager.c: mark a global var as static.
