@@ -243,7 +243,7 @@
 		  <child>
 		    <widget class="GtkLabel" id="label851">
 		      <property name="visible">True</property>
-		      <property name="label" translatable="yes">&lt;b&gt;Auto Indentation&lt;/b&gt;</property>
+		      <property name="label" translatable="yes">&lt;b&gt;Automatic Indentation&lt;/b&gt;</property>
 		      <property name="use_underline">False</property>
 		      <property name="use_markup">True</property>
 		      <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -292,7 +292,7 @@
 			<widget class="GtkCheckButton" id="auto_indent_checkbutton">
 			  <property name="visible">True</property>
 			  <property name="can_focus">True</property>
-			  <property name="label" translatable="yes">_Enable auto indentation</property>
+			  <property name="label" translatable="yes">_Enable automatic indentation</property>
 			  <property name="use_underline">True</property>
 			  <property name="relief">GTK_RELIEF_NORMAL</property>
 			  <property name="focus_on_click">True</property>
