@@ -1,3 +1,10 @@
+2004-12-13  Paolo Maggi  <paolo@gnome.org>
+
+	* dialogs/gedit-preferences-dialog.c (setup_editor_page): check for the 
+	validity of the auto_save interval.
+
+	* dialogs/gedit-preferences.glade2: s/auto indentation/automatic indentation
+
 2004-12-13  Paolo Borelli  <pborelli@katamail.com>
 
 	* gedit2.c: do not process further options if --quit is specified.
